<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/top_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/user_register_marginleft_and_right"
            android:layout_marginRight="@dimen/user_register_marginleft_and_right"
            android:layout_marginTop="@dimen/user_register_margintop"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    style="@style/user_register_left_text"
                    android:layout_weight="1.503"
                    android:text="@string/user_register_phone_num" />

                <EditText
                    android:id="@+id/user_forget_password_phone"
                    style="@style/user_register_edittext"
                    android:hint="@string/user_register_phone_num_edittext"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/user_forget_password_auth_code_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_weight="1.6"
                    android:background="@color/red"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="@dimen/user_register_send_auth_code_padding"
                    android:singleLine="true"
                    android:text="@string/user_register_send_auth_code"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    style="@style/user_register_left_text"
                    android:text="@string/user_register_auth_code" />

                <EditText
                    android:id="@+id/user_forget_password_auth_code_et"
                    style="@style/user_register_edittext"
                    android:hint="@string/user_register_auth_code_edittext"
                    android:inputType="number" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    style="@style/user_register_left_text"
                    android:text="@string/user_register_password" />

                <EditText
                    android:id="@+id/user_forget_password_password1"
                    style="@style/user_register_edittext"
                    android:digits="@string/password_type"
                    android:hint="@string/user_register_password_edittext"
                    android:inputType="textPassword" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    style="@style/user_register_left_text"
                    android:text="@string/user_register_again_password" />

                <EditText
                    android:id="@+id/user_forget_password_password2"
                    style="@style/user_register_edittext"
                    android:digits="@string/password_type"
                    android:hint="@string/user_register_again_password_edittext"
                    android:inputType="textPassword" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <TextView
                android:id="@+id/user_register_again_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text=""
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/user_forget_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:padding="@dimen/user_register_register_now_padding"
                android:text="确定修改"
                android:textColor="@color/white"
                android:textSize="@dimen/user_register_register_now_textsize" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
