<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle"
    android:divider="@drawable/bottom_line"
    android:orientation="vertical">
    <include layout="@layout/top_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/user_register_marginleft_and_right"
            android:layout_marginRight="@dimen/user_register_marginleft_and_right"
            android:layout_marginTop="@dimen/margin_size2"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    style="@style/user_register_left_text"
                    android:text="@string/fragment_order_restaurant_text" />

                <TextView
                    android:id="@+id/register_nickname"
                    style="@style/user_register_edittext"
                    android:text="@string/fragment_order_restaurant_enter"
                    android:maxLength="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    style="@style/user_register_left_text"
                    android:text="@string/fragment_order_room_text" />

                <TextView
                    android:id="@+id/order_room_tv"
                    style="@style/user_register_edittext"
                    android:text="@string/fragment_order_room_enter"
                    android:maxLength="11" />

                <TextView
                    android:id="@+id/order_room_enter_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:background="@color/sky_blue"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="@dimen/user_register_send_auth_code_padding"
                    android:singleLine="true"
                    android:text="@string/fragment_order_room_enter"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    style="@style/user_register_left_text"
                    android:text="@string/fragment_order_dtime_text" />

                <EditText
                    android:id="@+id/order_dtime_et"
                    style="@style/user_register_edittext"
                    android:hint="@string/fragment_order_dtime_enter"
                    android:inputType="datetime" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    style="@style/user_register_left_text"
                    android:text="@string/fragment_order_cust_num_text" />

                <LinearLayout
                    android:id="@+id/user_register_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="left" >

                    <EditText
                        android:id="@+id/order_cust_num_et"
                        style="@style/user_register_edittext"
                        android:hint="@string/fragment_order_cust_num_enter"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    style="@style/user_register_left_text"
                    android:singleLine="false"
                    android:text="@string/fragment_order_cust_griddle_text" />
                <TextView
                    android:id="@+id/order_cust_griddle_et"
                    style="@style/user_register_edittext"
                    android:text="@string/fragment_order_cust_griddle_enter" />
                <TextView
                    android:id="@+id/order_cust_griddle_enter_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:background="@color/sky_blue"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="@dimen/user_register_send_auth_code_padding"
                    android:singleLine="true"
                    android:text="@string/fragment_order_cust_griddle_tv"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text=""
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/bt_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/sky_blue"
                    android:padding="@dimen/user_register_register_now_padding"
                    android:text="@string/fragment_order_bt1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/user_register_register_now_textsize" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/bt_takeaway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/sky_blue"
                    android:padding="@dimen/user_register_register_now_padding"
                    android:text="@string/fragment_order_bt2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/user_register_register_now_textsize" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/user_register_paddingtop_and_botton"
                android:paddingTop="@dimen/user_register_paddingtop_and_botton" >

                <TextView
                    android:layout_width="7dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text=""
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/bt_search_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/sky_blue"
                    android:padding="@dimen/user_register_register_now_padding"
                    android:text="@string/fragment_order_bt3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/user_register_register_now_textsize" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text=""
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/bt_modify_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/sky_blue"
                    android:padding="@dimen/user_register_register_now_padding"
                    android:text="@string/fragment_order_bt4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/user_register_register_now_textsize" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/bt_delete_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/sky_blue"
                    android:padding="@dimen/user_register_register_now_padding"
                    android:text="@string/fragment_order_bt5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/user_register_register_now_textsize" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textSize="16sp"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>
    <!-- TODO: Update blank fragment layout -->

</LinearLayout>